# pybind_seminar

./: .gitmodules  CMakeLists.txt  README.md
include/: my_file.hpp
src/: my_file.cpp  pybind_connector.cpp
